BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Reminder_BMS__c.object
<CustomObject>
    <fields>
        <fullName>Description_BMS__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Individual_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reminder_Date_BMS__c</fullName>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZS_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>ZS ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Reminder</label>
    <nameField>
        <displayFormat>RM-{00000000}</displayFormat>
        <label>Reminder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>